sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:11: error: not found: value nbPos
      for (k <- 0 to nbPos-1)
                     ^SelectBaseball:21: error: not enough arguments for method deplacerTrou: (arrive: Int, sens: Int)Unit.
Unspecified value parameter sens.
    deplacerTrou(baseJoueur+1);
                ^